# voice_ai_assistant_rust

./: .env  .env.example  Makefile  README.md  a  docker-compose.yml  mysignature
backend/: Cargo.toml  Dockerfile  debug  debug.rs
backend/src/: main.rs
frontend/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
frontend/src/: api.ts  avatar.ts  main.ts  ui.ts
