# backend/Cargo.toml
[package]
name = "audio_qa_avatar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.7", features = ["macros", "json", "tokio", "multipart"] }
base64 = "0.22"
bytes = "1"
http = "1"
quick-xml = "0.36"
reqwest = { version = "0.12", default-features = false, features = ["json","multipart","stream","rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# ⬇️ TAMBAHKAN baris ini
futures-util = "0.3"
